# ProceduralCodec-v15

./: .gitignore  INSTALL_SINGLE.md  README.md  README_CLI_ONLY.md  README_ORCHESTRATOR.md  mkdocs.yml  pyproject.toml
.github/scripts/: code_state.py
.github/workflows/: ci.yml  docs.yml
configs/: requirements.dev.txt  requirements.docs.txt
docs/: index.md
docs/api/: pc15codec.md  pc15data.md  pc15metrics.md  pc15proc.md  pc15viz.md  pc15wf.md
src/pc15/: __init__.py
tests/: test_20_gens_vector.py  test_api_contracts.py  test_bitstream_v15.py  test_cli_audit_generators_artifacts.py  test_cli_fallback_without_orchestrator.py  test_codec_facade_futureproof.py  test_composite_smoke.py  test_core_errors.py  test_determinism_generators.py  test_generators_audit.py  test_generators_autoload.py  test_generators_timing.py  test_header_crc.py  test_metrics.py  test_no_overflow_guards.py  test_orchestrator_and_cli_pipeline.py  test_params_codec.py  test_payload_futureproof.py  test_payload_raw.py  test_payload_raw_and_rans.py  test_pc15_hooks.py  test_pc15learn_labels.py  test_proc_registry.py  test_public_api.py  test_qv_kmeans_roundtrip.py  test_qv_quantize_bounds.py  test_rans_tables.py  test_rans_tables_consistency.py  test_rans_v15_real.py  test_rng_determinism.py  test_search_bits.py  test_search_border_mask.py  test_search_grid_refine.py  test_search_numpy_rd.py  test_seed_policy.py  test_step1_tilerec_roundtrip.py  test_step1_tiling_blend_shapes.py  test_symbols_futureproof.py  test_tile_payload_rans_bitstream_futureproof.py  test_tiling_blend.py
(+10 files in other folders)
